fix(input): Fix width overflowing

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -47,7 +47,8 @@ html, margin {
 }
 
 #controls input[type="number"] {
-    width: 97%;
+    width: 100%;
+    box-sizing: border-box;
 }
 
 #controls .heading {
